# seven_code

./: .clangd  .gitignore  CMakeLists.txt  README.md  flash_app.jlink
.opencode/extensions/video-probe/: tsconfig.json  video-probe-core.ts  video-probe-response.ts  video-probe.ts
.opencode/skills/aux-eye-monitor/: SKILL.md
apps/: README.md
apps/blinky_f103/: CMakeLists.txt
apps/blinky_f103/include/: debug.h
apps/blinky_f103/src/: main.c
boards/: README.md
boards/bluepill_f103c8/: CMakeLists.txt  board.h
bsp/: .gitignore  README.md  download_libs.sh
bsp/common/: retarget.c  syscalls.c
bsp/gd32/f0/: CMakeLists.txt.template
bsp/gd32/f4/: CMakeLists.txt
bsp/stm32/f1/: CMakeLists.txt
bsp/stm32/f1/startup/: startup_stm32f103xb.s
bsp/stm32/f4/: CMakeLists.txt
bsp/stm32/f4/inc/: stm32f4xx_hal_conf.h
bsp/stm32/f7/: CMakeLists.txt.template
cmake/: README.md  helpers.cmake
cmake/chips/: README.md  stm32f103c8.cmake
cmake/toolchain/: README.md
docs/: ai-closed-loop-pitfalls.md  ai-workflow.md  aux-eye-README.md  aux-eye-perception.md  aux-eye-perception.schema.json  startup-fix.md  toolchain.md
docs/aux-eye/: README.md  live-loop.md  perception.md
drivers/: README.md
gd32_template/: .gitignore  CMakeLists.txt  README.md  flash_all.jlink  flash_app.jlink  flash_bootloader.jlink
gd32_template/app/: CMakeLists.txt
gd32_template/app/src/: verify_main.c
gd32_template/bootloader/link/: gd32f4xx_bootloader.ld
gd32_template/cmake/: arm-none-eabi-gcc.cmake
middleware/: README.md
schemas/aux-eye/: decision.schema.json  goal.schema.json  perception.schema.json  temporal.schema.json
stm32_template/: CMakeLists.txt  README.md  switch_mcu.sh
stm32_template/app/: CMakeLists.txt
stm32_template/app/include/: FreeRTOSConfig.h
stm32_template/app/link/: gd32f4xx_app.ld  stm32f103_app.ld
stm32_template/app/src/: main.c  main_baremetal.c  verify_f103_main.c  verify_stm32_main.c
stm32_template/app/startup/: startup_stm32f103xb.s
stm32_template/bootloader/: CMakeLists.txt
stm32_template/bootloader/src/: main.c
stm32_template/bootloader/startup/: startup_gd32f4xx.s
stm32_template/docs/: ai-workflow.md
stm32_template/tools/: build_and_flash.sh  git-proxy-auto  serial_capture.py
tests/aux-eye/: conftest.py  live_loop_e2e_cases.py  live_loop_e2e_failsafes.py  live_loop_e2e_support.py  test_aruco.py  test_decision_verify.py  test_expr_eval.py  test_goal_decide.py  test_live_loop_docs.py  test_live_loop_e2e.py  test_live_loop_run_state_integration.py  test_live_loop_schemas.py  test_run_state.py  test_serial_anomaly.py  test_temporal_history_verify.py  test_temporal_verify.py  test_verify.py
tests/fixtures/aux-eye/: README.md  dark.gt.json  mug.gt.json
tests/fixtures/aux-eye/temporal-still/: sequence.gt.json
tools/: aruco_pose.py  build_and_flash.sh  camera_capture.py  gen_aruco_golden.py  requirements-vision.txt  verify_aux_eye.py  verify_goto_def.py
tools/aux-eye/: _expr_eval.py  aux_eye_goal_decide.py  aux_eye_run_state.py  serial_anomaly_scan.py  verify_aux_eye.py  verify_aux_eye_decision.py  verify_aux_eye_temporal.py
